# yolo_service

./: .dockerignore  .gitignore  BUILD.md  BUILD_EXOSIP2.md  BUILD_GB28181.md  CLEANUP_SDK.md  CMakeLists.txt  DOCKER_BM1684_BUILD.md  DOCKER_BUILD.md  Dockerfile.arm64  FIX_ONNX_SCHEMA_ERROR.md  GB28181_README.md  GB28181_SIP_IMPLEMENTATION.md  GB28181_SUMMARY.md  GB28181_TEST_README.md  GLIBC_COMPATIBILITY.md  LINARO_CROSS_COMPILE.md  MANUAL_DOWNLOAD_EXOSIP2.md  MODEL_CONVERSION.md  README.md  README_EXOSIP2.md  WEBSOCKET_DEBUG.md  WEBSOCKET_FIX.md  WEBSOCKET_IXWEBSOCKET.md  WEBSOCKET_TEST.md  apply_onnx_patch.sh  build-bm1684-arm64.sh  build-linaro-ubuntu20.04.sh  build.bat  build.sh  build_arm64.sh  cleanup_sophonsdk.sh  configure_apt_proxy.sh  docker-build-arm64.sh  docker-compose-gb28181-test.yml  docker-compose.arm64.yml  fix_apt_sources.sh  fix_gb28181_image.sh  install_gb28181_deps.sh  launch.sh  (+9 more)
cmake/: FindExosip2.cmake
docs/: BM1684_SUPPORT.md
gb28181-test-data/: client_config_example.json
gb28181-test-data/srs/: srs.conf
gb28181-test-data/srs/html/: index.html  player.html
ports/ffmpeg/: fix-dl-library.patch
ports/onnx/: fix-schema-duplicate-remaining.patch  fix-schema-duplicate.patch  portfile.cmake
scripts/: download_model.py  get_target_sysroot.sh
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  alert_api.cpp  algorithm_config_api.cpp  channel_api.cpp  gb28181_config_api.cpp  model_api.cpp  push_stream_config_api.cpp  report_config_api.cpp  stream_config_api.cpp  ws_api.cpp  ws_api_ix.cpp  ws_handler.cpp
src/api/include/: alert_api.h  algorithm_config_api.h  channel_api.h  gb28181_config_api.h  model_api.h  push_stream_config_api.h  report_config_api.h  stream_config_api.h  ws_api.h  ws_handler.h
src/config/: CMakeLists.txt
src/config/include/: config.h
src/database/: CMakeLists.txt  database.cpp
src/database/include/: database.h
src/detector/: CMakeLists.txt  yolov11_detector.cpp  yolov11_detector_bm1684.cpp
src/detector/include/: onnx_env_singleton.h  yolov11_detector.h  yolov11_detector_bm1684.h
src/models/: CMakeLists.txt  alert.cpp  algorithm_config.cpp  channel.cpp  gb28181_config.cpp  push_stream_config.cpp  report_config.cpp  stream_config.cpp
src/models/include/: alert.h  algorithm_config.h  channel.h  gb28181_config.h  push_stream_config.h  report_config.h  stream_config.h
src/service/: CMakeLists.txt  service.cpp
src/service/include/: service.h
src/stream/: CMakeLists.txt  bm1684_video_decoder.cpp  bm1684_video_encoder.cpp  bm_hw_codec.cpp  frame_callback.cpp  gb28181_sip_client.cpp  gb28181_streamer.cpp  rtmp_streamer copy.cpp  rtmp_streamer.cpp  stream_manager.cpp
src/stream/include/: bm1684_video_decoder.h  bm1684_video_encoder.h  bm_hw_codec.h  frame_callback.h  gb28181_sip_client.h  gb28181_streamer.h  rtmp_streamer copy.h  rtmp_streamer.h  stream_manager.h
src/utils/: CMakeLists.txt  gb28181_utils.cpp  image_utils.cpp  report_service.cpp
src/utils/include/: channel_utils.h  charconv_compat.h  common_utils.h  ffmpeg_utils.h  filesystem_compat.h  gb28181_utils.h  httplib.h  image_utils.h  optional_compat.h  report_service.h  string_view_compat.h
src/utils/include_compat/: charconv  filesystem  optional  string_view
website/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
website/src/: App.tsx  main.tsx
website/src/api/: alert.ts  algorithm.ts  channel.ts  config.ts  model.ts
website/src/assets/css/: global.scss  reset.css
website/src/components/ROIDrawer/: index.tsx
website/src/config/: index.ts
website/src/layouts/: index.scss  index.tsx
website/src/pages/Alert/List/: index.tsx
website/src/pages/AlgorithmConfig/: index.tsx
website/src/pages/Channel/List/: index.tsx
website/src/pages/GB28181Config/: index.tsx
website/src/pages/Login/: index.scss  index.tsx
website/src/pages/Model/List/: index.tsx
website/src/pages/PushStreamConfig/: index.tsx
website/src/pages/ReportConfig/: index.tsx
website/src/pages/StreamConfig/: index.tsx
website/src/routers/: constant.tsx  index.tsx
website/src/routers/modules/: alert.tsx  channel.tsx  model.tsx  report.tsx  stream.tsx
website/src/routers/types/: index.d.ts
website/src/routers/utils/: rankRouter.ts  router.ts
website/src/utils/: http.ts  websocket.ts
